--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
 	<script src="js/jquery.js" type="text/javascript"></script>
 	<script src="js/asyrch.js" type="text/javascript"></script>
 	<script type="text/javascript">
-		var asyrch = new asyrch("#results");
+		var asyrch = new Asyrch("#results");
 		asyrch.search("meltingice");
 	</script>
 </head>
 <body>
-	<div id="results">
-	
+	<div id="search_wrap">
+		<input type="text" id="search" onkeyup="asyrch.liveSearch(this)" value="meltingice" />
+	</div>
+	<div id="results_wrap">
+		<ul id="results">
+		
+		</ul>
 	</div>
 </body>
 </html>
